HW/5.kubernetes-network/ingress.yaml
---
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  rules:
  - host: redmine.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redmine-svc
            port:
              number: 80
